--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsonmonster",
+  "name": "JSONMonster",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -10,7 +10,6 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
-  "private": true,
   "dependencies": {
     "@angular/common": "2.0.0",
     "@angular/compiler": "2.0.0",
@@ -19,8 +18,17 @@
     "@angular/http": "2.0.0",
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/router": "^3.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.7",
+    "angular2-jwt": "^0.1.24",
+    "bootstrap": "^3.3.7",
+    "choices.js": "^2.2.3",
     "core-js": "^2.4.1",
+    "crio": "^3.0.0-rc.2",
+    "ng2-redux": "^4.0.0-beta.0",
+    "ng2focus": "0.0.2",
+    "redux": "^3.6.0",
+    "redux-observable": "^0.12.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
@@ -37,6 +45,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
+    "redux-logger": "^2.7.0",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "2.0.2"
